--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
 
 steps:
   - script: |
-      for /f "usebackq tokens=*" %l in (`"c:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -property installationPath`) do set bar=%l
+      for /f "usebackq tokens=*" %%l in (`"c:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -property installationPath`) do set bar=%%l
       call "%bar%"\Common7\Tools\VsDevCmd.bat -arch=$(BuildPlatform)
       copy config\win32 config.h
       nmake -f win32\makefile.win32 
