--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,8 @@ steps:
       nmake -f win32\makefile.win32 
     displayName: Build
 
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)/tcsh-x64.exe'
+    artifact: 'executable'
+    publishLocation: 'pipeline'
