--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,5 @@ steps:
 - task: PublishPipelineArtifact@1
   inputs:
     targetPath: '$(Pipeline.Workspace)/tcsh-x64.exe'
-    artifact: 'executable'
+    artifact: 'binary'
     publishLocation: 'pipeline'
