--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,4 @@
-# .NET Desktop
-# Build and run tests for .NET Desktop or Windows classic desktop solutions.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
+# vim: se expandtab ts=4 sw=2 ai
 
 trigger:
 - master
@@ -14,9 +11,15 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: |
-  for /f "usebackq tokens=*" %%l in (`"c:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -property installationPath`) do set bar=%%l
-  call "%bar%"\Common7\Tools\VsDevCmd.bat -arch=$(BuildPlatform)
-  copy config\win32 config.h
-  nmake -f win32\makefile.win32 
+  - script: |
+      for /f "usebackq tokens=*" %%l in (`"c:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -property installationPath`) do set bar=%%l
+      call "%bar%"\Common7\Tools\VsDevCmd.bat -arch=$(BuildPlatform)
+      copy config\win32 config.h
+      nmake -f win32\makefile.win32 
+    displayName: Build
 
+  - task: PublishPipelineArtifact@1
+    inputs:
+      targetPath: '$(System.DefaultWorkingDirectory)/tcsh-x64.exe'
+      artifact: 'binary'
+      publishLocation: 'pipeline'
