--- a/win32/Makefile.win32
+++ b/win32/Makefile.win32
@@ -104,9 +104,9 @@ NTRES = BSDLOGO
 
 ASSRCS1=	sh.c sh.dir.c sh.err.c sh.exec.c sh.char.c \
 	sh.exp.c sh.file.c sh.hist.c sh.init.c \
-	sh.lex.c sh.misc.c sh.parse.c sh.print.c sh.proc.c sh.sem.c \
+	sh.lex.c sh.misc.c sh.parse.c sh.print.c \
 	sh.set.c sh.time.c 
-ASSRCS= $(ASSRCS1) sh.dol.c sh.glob.c sh.func.c 
+ASSRCS= $(ASSRCS1) sh.dol.c sh.glob.c sh.func.c sh.sem.c sh.proc.c 
 
 PSSRCS= glob.c mi.termios.c ma.setp.c vms.termcap.c
 
@@ -143,12 +143,15 @@ TCOBJS=	tc.alloc.$(SUF) tc.bind.$(SUF) tc.const.$(SUF)  \
 	tc.prompt.$(SUF) tc.sched.$(SUF) tc.sig.$(SUF) tc.str.$(SUF) \
 	tc.vers.$(SUF) tc.who.$(SUF) 
 
-NTSRCS = win32\io.c win32\stdio.c win32\dirent.c win32\signal.c\
+NTSRCS1 = win32\io.c win32\stdio.c win32\dirent.c win32\signal.c\
 		win32\support.c \
-		win32\nt.char.c win32\bogus.c win32\console.c win32\fork.c \
+		win32\nt.char.c win32\bogus.c win32\console.c \
 		win32\ntfunc.c win32\ntb1.c win32\ntb2.c win32\globals.c \
 		win32\ps.c win32\nt.const.c win32\clip.c\
 		win32\nt.bind.c  win32\nt.screen.c
+
+NTSRCS = $(NTSRCS1) win32\fork.c 
+
 NTOBJS = io.$(SUF) stdio.$(SUF) dirent.$(SUF) signal.$(SUF) support.$(SUF) \
 	    nt.char.$(SUF) bogus.$(SUF) console.$(SUF) fork.$(SUF) ntfunc.$(SUF) \
         globals.$(SUF)  ps.$(SUF) \
@@ -332,6 +335,6 @@ fastbuild: ed.defns.h sh.err.h tc.const.h win32\nt.const.h
 	$(CC) $(CF) $(CFLAGS) $(DFLAGS) $(EXTRAFLAGS)  $(IGNORE_64) ed.chared.c\
 	ed.inputl.c sh.dol.c sh.func.c sh.glob.c tw.parse.c tw.comp.c tw.color.c\
 	 ed.refresh.c tc.alloc.c tc.bind.c tc.printf.c tc.prompt.c
-	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $(NTSRCS)
+	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $(NTSRCS1)
 	$(CC) $(CF) $(CFLAGS) $(REST_WARNING_LEVEL) $(DFLAGS) $(EXTRAFLAGS) $(ASSRCS1)  \
 	$(TWSRCS1) $(SHSRCS1)  $(TCSRCS1) $(PSSRCS) $(EDSRCS1)
