--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,10 @@ steps:
       call "%bar%"\Common7\Tools\VsDevCmd.bat -arch=$(BuildPlatform)
       copy config\win32 config.h
       nmake -f win32\makefile.win32  FASTBUILD=1
+      for /f "usebackq tokens=3" %%i in (`findstr REV patchlevel.h`) do set TCSH_REV=%%i
+      for /f "usebackq tokens=3" %%j in (`findstr VERS patchlevel.h`) do set TCSH_VERS=%%j
+      for /f "usebackq tokens=3" %%k in (`findstr PATCHLEVEL patchlevel.h`) do set TCSH_PATCHLEVEL=%%k
+      echo "##vso[task.setvariable variable=BuildTitle]%TCSH_REV%.%TCSH_VERS%.%TCSH_PATCHLEVEL%"
     displayName: Build
 
 #  - task: PublishPipelineArtifact@1
@@ -32,7 +36,7 @@ steps:
       tagSource: 'manual' # Required when action == Create# Options: auto, manual
       #tagPattern: # Optional
       tag: $(Build.BuildNumber) # Required when action == Edit || Action == Delete || TagSource == Manual
-      title: $(Build.BuildNumber) Release from $(Build.SourceBranchName) # Optional
+      title: $(BuildTitle) Release from $(Build.SourceBranchName) # Optional
       #releaseNotesSource: 'file' # Optional. Options: file, input
       #releaseNotesFile: # Optional
       #releaseNotes: # Optional
