--- a/win32/Makefile.win32
+++ b/win32/Makefile.win32
@@ -67,13 +67,13 @@ BLDTYPE=retail
 
 
 NTLDFLAGS=  -entry:silly_entry  -debug
-NTCFLAGS = -Zi -DNTDBG   -Od
+NTCFLAGS = -Zi -DNTDBG -D_DEBUG  -Od
 LIBES= user32.lib advapi32.lib kernel32.lib $(DEBUG_CRTLIBS) strsafe.lib
 
 !else if "$(BLDTYPE)" == "retail"
 
 NTLDFLAGS=  -entry:silly_entry  -debug
-NTCFLAGS = -Zi -O2 
+NTCFLAGS = -Zi -O2  -DNDEBUG
 LIBES= user32.lib advapi32.lib kernel32.lib  $(CRTLIBS) strsafe.lib
 
 !else
@@ -148,14 +148,14 @@ NTSRCS1 = win32\io.c win32\stdio.c win32\dirent.c win32\signal.c\
 		win32\nt.char.c win32\bogus.c win32\console.c \
 		win32\ntfunc.c win32\ntb1.c win32\ntb2.c win32\globals.c \
 		win32\ps.c win32\nt.const.c win32\clip.c\
-		win32\nt.bind.c  win32\nt.screen.c
+		win32\nt.bind.c  win32\nt.screen.c win32\utf8_chars.cpp
 
 NTSRCS = $(NTSRCS1) win32\fork.c 
 
 NTOBJS = io.$(SUF) stdio.$(SUF) dirent.$(SUF) signal.$(SUF) support.$(SUF) \
 	    nt.char.$(SUF) bogus.$(SUF) console.$(SUF) fork.$(SUF) ntfunc.$(SUF) \
         globals.$(SUF)  ps.$(SUF) \
-		clip.$(SUF) nt.const.$(SUF) nt.bind.$(SUF) nt.screen.$(SUF)
+		clip.$(SUF) nt.const.$(SUF) nt.bind.$(SUF) nt.screen.$(SUF) utf8_chars.$(SUF)
 
 VHSRCS=$(PVSRCS) $(AVSRCS)
 
@@ -199,7 +199,6 @@ chlog:
 
 .c.$(SUF):
 	$(CC) $(CF) $(CFLAGS) $(REST_WARNING_LEVEL) $(DFLAGS) $(EXTRAFLAGS) $<
-
 
 ed.defns.h: ed.defns.c
 	-@del  $@
@@ -319,6 +318,9 @@ sh.proc.$(SUF): sh.proc.c
 CFLAGS_WX = $(CFLAGS) $(WINDOWS_WARNING_LEVEL) -DWINDOWS_ONLY $(ANALYZE_FLAGS)
 
 {win32}.c.$(SUF): 
+	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $<
+
+{win32}.cpp.$(SUF): 
 	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $<
 
 fork.$(SUF):win32\fork.c 
