Remove N-xx bindings

--- a/win32/Makefile.win32
+++ b/win32/Makefile.win32
@@ -92,6 +92,8 @@ FASTTARGET=fastbuild
 
 !if "$(NOUTF8)" == ""
 EXTRAFLAGS = $(EXTRAFLAGS) -DWINNT_NATIVE_UTF8_SUPPORT 
+!else
+EXTRAFLAGS = $(EXTRAFLAGS) -DWINNT_NATIVE_NO_UTF8 
 !endif
 
 CFLAGS= -MT $(FASTFLAGS) $(NTCFLAGS) $(INCLUDES) 
