--- a/win32/Makefile.win32
+++ b/win32/Makefile.win32
@@ -67,13 +67,13 @@ BLDTYPE=retail
 
 
 NTLDFLAGS=  -entry:silly_entry  -debug
-NTCFLAGS = -Zi -DNTDBG   -Od
+NTCFLAGS = -Zi -DNTDBG -D_DEBUG  -Od
 LIBES= user32.lib advapi32.lib kernel32.lib $(DEBUG_CRTLIBS) strsafe.lib
 
 !else if "$(BLDTYPE)" == "retail"
 
 NTLDFLAGS=  -entry:silly_entry  -debug
-NTCFLAGS = -Zi -O2 
+NTCFLAGS = -Zi -O2  -DNDEBUG
 LIBES= user32.lib advapi32.lib kernel32.lib  $(CRTLIBS) strsafe.lib
 
 !else
@@ -88,6 +88,12 @@ NTCFLAGS = $(NTCFLAGS) -Zp8
 !if "$(FASTBUILD)" != ""
 FASTFLAGS= -MP
 FASTTARGET=fastbuild
+!endif
+
+!if "$(NOUTF8)" == ""
+EXTRAFLAGS = $(EXTRAFLAGS) -DWINNT_NATIVE_UTF8_SUPPORT 
+!else
+EXTRAFLAGS = $(EXTRAFLAGS) -DWINNT_NATIVE_NO_UTF8 
 !endif
 
 CFLAGS= -MT $(FASTFLAGS) $(NTCFLAGS) $(INCLUDES) 
@@ -108,7 +114,7 @@ ASSRCS1=	sh.c sh.dir.c sh.err.c sh.exec.c sh.char.c \
 	sh.set.c sh.time.c 
 ASSRCS= $(ASSRCS1) sh.dol.c sh.glob.c sh.func.c sh.sem.c sh.proc.c 
 
-PSSRCS= glob.c mi.termios.c ma.setp.c vms.termcap.c
+PSSRCS= glob.c mi.termios.c ma.setp.c #vms.termcap.c
 
 SHSRCS= $(ASSRCS) $(PSSRCS)
 SHOBJS=	sh.$(SUF) sh.dir.$(SUF) sh.dol.$(SUF) sh.err.$(SUF) sh.exec.$(SUF) \
@@ -128,8 +134,16 @@ TWOBJS=	tw.help.$(SUF) tw.init.$(SUF) tw.parse.$(SUF) tw.spell.$(SUF) \
 EDSRCS1= ed.defns.c ed.init.c  ed.xmap.c ed.term.c 
 EDSRCS = $(EDSRCS1) ed.chared.c ed.inputl.c ed.refresh.c 
 
+!if "$(NOUTF8)" == ""
+EDSRCS = $(EDSRCS) ed.screen.c
+!endif
+
 EDOBJS=	ed.chared.$(SUF) ed.refresh.$(SUF) ed.init.$(SUF) \
-	ed.inputl.$(SUF) ed.defns.$(SUF) ed.xmap.$(SUF) ed.term.$(SUF)
+	ed.inputl.$(SUF) ed.defns.$(SUF) ed.xmap.$(SUF) ed.term.$(SUF) 
+
+!if "$(NOUTF8)" == ""
+EDOBJS = $(EDOBJS) ed.screen.$(SUF)
+!endif
 
 TCSRCS1= tc.const.c tc.disc.c \
 	tc.func.c tc.os.c tc.nls.c \
@@ -148,14 +162,14 @@ NTSRCS1 = win32\io.c win32\stdio.c win32\dirent.c win32\signal.c\
 		win32\nt.char.c win32\bogus.c win32\console.c \
 		win32\ntfunc.c win32\ntb1.c win32\ntb2.c win32\globals.c \
 		win32\ps.c win32\nt.const.c win32\clip.c\
-		win32\nt.bind.c  win32\nt.screen.c
+		win32\nt.bind.c  win32\nt.screen.c win32\Win10.termcap.c win32\utf8_chars.cpp
 
 NTSRCS = $(NTSRCS1) win32\fork.c 
 
 NTOBJS = io.$(SUF) stdio.$(SUF) dirent.$(SUF) signal.$(SUF) support.$(SUF) \
 	    nt.char.$(SUF) bogus.$(SUF) console.$(SUF) fork.$(SUF) ntfunc.$(SUF) \
         globals.$(SUF)  ps.$(SUF) \
-		clip.$(SUF) nt.const.$(SUF) nt.bind.$(SUF) nt.screen.$(SUF)
+		clip.$(SUF) nt.const.$(SUF) nt.bind.$(SUF) nt.screen.$(SUF) Win10.termcap.$(SUF) utf8_chars.$(SUF)
 
 VHSRCS=$(PVSRCS) $(AVSRCS)
 
@@ -199,7 +213,6 @@ chlog:
 
 .c.$(SUF):
 	$(CC) $(CF) $(CFLAGS) $(REST_WARNING_LEVEL) $(DFLAGS) $(EXTRAFLAGS) $<
-
 
 ed.defns.h: ed.defns.c
 	-@del  $@
@@ -319,6 +332,9 @@ sh.proc.$(SUF): sh.proc.c
 CFLAGS_WX = $(CFLAGS) $(WINDOWS_WARNING_LEVEL) -DWINDOWS_ONLY $(ANALYZE_FLAGS)
 
 {win32}.c.$(SUF): 
+	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $<
+
+{win32}.cpp.$(SUF): 
 	$(CC) $(CF) $(CFLAGS_WX) $(DFLAGS) $(EXTRAFLAGS) $<
 
 fork.$(SUF):win32\fork.c 
