Update azure-pipelines.yml for Azure Pipelines
handle change of config directory name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
   - script: |
       for /f "usebackq tokens=*" %%l in (`"c:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -property installationPath`) do set bar=%%l
       call "%bar%"\Common7\Tools\VsDevCmd.bat -arch=$(BuildPlatform)
-      copy config\win32 config.h
+      copy system\win32 config.h
       nmake -f win32\makefile.win32  FASTBUILD=1
       for /f "usebackq tokens=3" %%i in (`findstr REV patchlevel.h`) do set TCSH_REV=%%i
       for /f "usebackq tokens=3" %%j in (`findstr VERS patchlevel.h`) do set TCSH_VERS=%%j
